--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.9.1
+backports-datetime-fromisoformat==2.0.3
 Django==5.2.6
+django-debug-toolbar==6.0.0
 djangorestframework==3.16.1
+environs==14.3.0
+marshmallow==4.0.1
 pillow==11.3.0
+python-dotenv==1.1.1
 sqlparse==0.5.3
 typing_extensions==4.15.0
