--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.9.1
 backports-datetime-fromisoformat==2.0.3
 Django==5.2.6
 django-debug-toolbar==6.0.0
+django-filter==25.1
 djangorestframework==3.16.1
 environs==14.3.0
 marshmallow==4.0.1
