--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,10 @@ djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.11
 environs==14.3.0
+exceptiongroup==1.3.0
 importlib_resources==6.5.2
 inflection==0.5.1
+iniconfig==2.1.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 marshmallow==4.0.1
@@ -20,7 +22,11 @@ packaging==25.0
 pathspec==0.12.1
 pillow==11.3.0
 platformdirs==4.4.0
+pluggy==1.6.0
+Pygments==2.19.2
 PyJWT==2.10.1
+pytest==8.4.2
+pytest-django==4.11.1
 python-dotenv==1.1.1
 pytokens==0.1.10
 pytz==2025.2
